--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Blog</title>
-    <link rel="stylesheet" href="/css/style.css">
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Blog</title>
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+
+<body>
   <header>
-<section>
-
-</section>
-<nav>
-  <section>
-    <a href="">Logo</a>
-  </section>
-  <section>
-
-  </section>
-</nav>
+    <section class="icon">
+       <div class="">
+         <a href="">facebook</a>
+         <a href="">twitter</a>
+         <a href="">instagram</a>
+         <a href="">linkedin</a>
+         <a href="">youtube</a>
+       </div>
+    </section>
+    <nav>
+      <section>
+        <a href="/">Logo</a>
+      </section>
+      <section>
+        <a href="perfil.html">Sobre mi</a>
+      </section>
+    </nav>
   </header>
-  </body>
+</body>
+
 </html>
