1era parte del header en css

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>Blog</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
   <header>
-    <section class="icon">
-       <div class="">
+    <section class="header-icons-container">
+       <div class="icons">
          <a href="">facebook</a>
          <a href="">twitter</a>
          <a href="">instagram</a>
@@ -19,9 +19,9 @@
        </div>
     </section>
     <nav>
-      <section>
+      <section class="nav-logo-container">
         <a href="/">Logo</a>
-      </section>
+      </sectionclass="profile-link">
       <section>
         <a href="perfil.html">Sobre mi</a>
       </section>
