--- a/index.html
+++ b/index.html
@@ -5,24 +5,25 @@
   <meta charset="utf-8">
   <title>Blog</title>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="font/flaticon.css">
 </head>
 
 <body>
   <header>
     <section class="header-icons-container">
        <div class="icons">
-         <a href="">facebook</a>
-         <a href="">twitter</a>
-         <a href="">instagram</a>
-         <a href="">linkedin</a>
-         <a href="">youtube</a>
+         <a href=""><span class="flaticon-001-facebook"></span></a>
+         <a href=""><span class="flaticon-002-twitter"></span></a>
+         <a href=""><span class="flaticon-011-instagram"></span></a>
+         <a href=""><span class="flaticon-010-linkedin"></span></a>
+         <a href=""><span class="flaticon-008-youtube"></span></a>
        </div>
     </section>
     <nav>
       <section class="nav-logo-container">
-        <a href="/">Logo</a>
-      </sectionclass="profile-link">
-      <section>
+        <a href="/"> <img src="assets/img/Logo-negro.png" alt="Logo de mi blog"> </a>
+      </section>
+      <section  class="profile-link">
         <a href="perfil.html">Sobre mi</a>
       </section>
     </nav>
