--- a/index.html
+++ b/index.html
@@ -21,13 +21,27 @@
     </section>
     <nav>
       <section class="nav-logo-container">
-        <a href="/"> <img src="assets/img/Logo-negro.png" alt="Logo de mi blog"> </a>
+        <a href=""> <img src="assets/img/Logo-negro.png" alt="Logo de mi blog"> </a>
       </section>
       <section  class="profile-link">
         <a href="perfil.html">Sobre mi</a>
       </section>
     </nav>
   </header>
+  <main class="main">
+    <section class="">
+      <div class="main-foto-container">
+        <a href=""> <img src="assets/img/cover.png" alt=""> </a>
+      </div>
+      <div class="main-text-container">
+      <p>Conoce las novedades y  <br>
+          noticias del mundo tech. </p>
+      </div>
+    </section>
+    <section class="main-button-container">
+    <button type="button" name="boton">Entra ya! <a href=""></a> </button>
+    </section>
+  </main>
 </body>
 
 </html>
