--- a/index.html
+++ b/index.html
@@ -11,35 +11,30 @@
 <body>
   <header>
     <section class="header-icons-container">
-       <div class="icons">
-         <a href=""><span class="flaticon-001-facebook"></span></a>
-         <a href=""><span class="flaticon-002-twitter"></span></a>
-         <a href=""><span class="flaticon-011-instagram"></span></a>
-         <a href=""><span class="flaticon-010-linkedin"></span></a>
-         <a href=""><span class="flaticon-008-youtube"></span></a>
-       </div>
+      <div class="icons">
+        <a href=""><span class="flaticon-001-facebook"></span></a>
+        <a href=""><span class="flaticon-002-twitter"></span></a>
+        <a href=""><span class="flaticon-011-instagram"></span></a>
+        <a href=""><span class="flaticon-010-linkedin"></span></a>
+        <a href=""><span class="flaticon-008-youtube"></span></a>
+      </div>
     </section>
     <nav>
       <section class="nav-logo-container">
         <a href=""> <img src="assets/img/Logo-negro.png" alt="Logo de mi blog"> </a>
       </section>
-      <section  class="profile-link">
+      <section class="profile-link">
         <a href="perfil.html">Sobre mi</a>
       </section>
     </nav>
   </header>
-  <main class="main">
-    <section class="">
-      <div class="main-foto-container">
-        <a href=""> <img src="assets/img/cover.png" alt=""> </a>
-      </div>
-      <div class="main-text-container">
-      <p>Conoce las novedades y  <br>
-          noticias del mundo tech. </p>
-      </div>
-    </section>
-    <section class="main-button-container">
-    <button type="button" name="boton">Entra ya! <a href=""></a> </button>
+  <main class="home-main">
+    <section>
+      <p class="home-main-text">Conoce las novedades y
+        noticias del mundo tech. </p>
+      <button type="button" class="home-main-button" >
+        <a href="blogs.html">Entra ya!</a>
+      </button>
     </section>
   </main>
 </body>
