blogs finalizado con estilos

--- a/blogs.html
+++ b/blogs.html
@@ -36,16 +36,69 @@
 </body>
 <main class="blogs-main">
   <h2 class="blogs-main-title">Noticias</h2>
-    <img src="assets/img/Lorenzo-herrera.jpg" alt="Imagen del post">
+  <img src="assets/img/Lorenzo-herrera.jpg" alt="Imagen del post">
   <h3 class="blogs-main-post-title">Título <br> del Blogpost</h3>
   <p class="blogs-main-post-text">Texto del Blogpost. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec arcu eget massa pretium pellentesque. Quisque nec convallis sapien. Vivamus pharetra ex ac sem hendrerit euismod. </p>
-  <button type="button" class="blogs-main-button" >
+  <button type="button" class="blogs-main-button">
     <a href="blogs.html">Leer más</a>
   </button>
 </main>
 
-<div class="">
-  Hola putos
-</div>
+<section class="ultimos-blogpost">
+  <p>Ultimos blogposts</p>
+  <span class="blogpost-container">
+    <div class="articulos">
+      <span class="articulo1">
+        <img src="assets/img/uriel-soberanes.jpg" alt="Imagen del Blogpost">
+        <p class="articulo1-title">Titulo del Blogpost</p>
+        <p class="articulo1-texto">Texto del Blogpost. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec arcu eget massa pretium pellentesque. Quisque nec convallis sapien. Vivamus pharetra ex ac sem hendrerit euismod.</p>
+        <button type="button" class="articulo1-button">
+          <a href="blogs.html">Leer más</a>
+        </button>   
+      </span>
+      <span class="articulo2">
+        <img src="assets/img/uriel-soberanes.jpg" alt="Imagen del Blogpost">
+        <p class="articulo2-title">Titulo del Blogpost</p>
+        <p class="articulo2-texto">Texto del Blogpost. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec arcu eget massa pretium pellentesque. Quisque nec convallis sapien. Vivamus pharetra ex ac sem hendrerit euismod.</p>
+        <button type="button" class="articulo2-button">
+          <a href="blogs.html">Leer más</a>
+        </button> 
+      </span>
+
+      <span class="articulo3">
+        <img src="assets/img/uriel-soberanes.jpg" alt="Imagen del Blogpost">
+        <p class="articulo3-title">Titulo del Blogpost</p>
+        <p class="articulo3-texto">Texto del Blogpost. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec arcu eget massa pretium pellentesque. Quisque nec convallis sapien. Vivamus pharetra ex ac sem hendrerit euismod.</p>
+        <button type="button" class="articulo3-button">
+          <a href="blogs.html">Leer más</a>
+        </button> 
+      </span>
+      <span class="articulo4">
+        <img src="assets/img/uriel-soberanes.jpg" alt="Imagen del Blogpost">
+        <p class="articulo4-title">Titulo del Blogpost</p>
+        <p class="articulo4-texto">Texto del Blogpost. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec arcu eget massa pretium pellentesque. Quisque nec convallis sapien. Vivamus pharetra ex ac sem hendrerit euismod.</p>
+        <button type="button" class="articulo4-button">
+          <a href="blogs.html">Leer más</a>
+        </button> 
+      </span>
+      <span class="articulo5">
+        <img src="assets/img/uriel-soberanes.jpg" alt="Imagen del Blogpost">
+        <p class="articulo5-title">Titulo del Blogpost</p>
+        <p class="articulo5-texto">Texto del Blogpost. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec arcu eget massa pretium pellentesque. Quisque nec convallis sapien. Vivamus pharetra ex ac sem hendrerit euismod.</p>
+        <button type="button" class="articulo5-button">
+          <a href="blogs.html">Leer más</a>
+        </button> 
+      </span>
+      <span class="articulo6">
+        <img src="assets/img/uriel-soberanes.jpg" alt="Imagen del Blogpost">
+        <p class="articulo6-title">Titulo del Blogpost</p>
+        <p class="articulo6-texto">Texto del Blogpost. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec arcu eget massa pretium pellentesque. Quisque nec convallis sapien. Vivamus pharetra ex ac sem hendrerit euismod.</p>
+        <button type="button" class="articulo6-button">
+          <a href="blogs.html">Leer más</a>
+        </button> 
+      </span>
+    </div>
+  </span>
+</section>
 
 </html>
